--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -2,16 +2,16 @@
 <div ng-if="loggedUser.logged">
   <div class="uk-height-medium uk-background-cover uk-light uk-flex uk-flex-top uk-background-fixed" uk-parallax="bgy: -50" style="background-image: url(/resources/images/banner.jpg);">
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-      <h1 class="m-text-white uk-text-bold">{{'INDEX_SLOGAN' | translate}}</h1>
-      <h1 class="m-text-white uk-text-bold">{{'INDEX_WELCOME' | translate}}</h1>
+      <h1 class="m-text-white uk-text-bold uk-h1">{{'INDEX_SLOGAN' | translate}}</h1>
+      <h1 class="m-text-white uk-text-bold uk-h1">{{'INDEX_WELCOME' | translate}}</h1>
     </div>
   </div>
 </div>
 <div ng-if="!loggedUser.logged">
   <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-flex uk-flex-top uk-background-fixed" uk-parallax="bgy: -50" style="background-image: url(/resources/images/banner.jpg);">
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-      <h1 class="m-text-white uk-text-bold uk-animation-scale-up">{{'INDEX_SLOGAN' | translate}}</h1>
-      <h1 class="m-text-white uk-text-bold" uk-parallax="opacity: 0,8; y: 100,0; scale: 1,1; viewport: 0.3;">{{'INDEX_WELCOME' | translate}}</h1>
+      <h1 class="m-text-white uk-text-bold uk-animation-scale-up uk-h1">{{'INDEX_SLOGAN' | translate}}</h1>
+      <h1 class="m-text-white uk-text-bold uk-h1" uk-parallax="opacity: 0,8; y: 100,0; scale: 1,1; viewport: 0.3;">{{'INDEX_WELCOME' | translate}}</h1>
     </div>
   </div>
 </div>
