Added word brake

--- a/frontend/app/views/comment/commentViewController.html
+++ b/frontend/app/views/comment/commentViewController.html
@@ -1,7 +1,7 @@
 <main ng-if="mainComment" class="uk-container-small uk-margin-auto">
 
   <h1 class="uk-text-meta uk-margin-top">{{ 'COMMENT_VIEW_HEADING' | translate}}</h1>
-  <p class="uk-text-lead uk-margin-small-top"><a ng-href="post/{{mainComment.originalElement.post.id}}">
+  <p class="uk-text-lead uk-margin-small-top word-brake"><a ng-href="post/{{mainComment.originalElement.post.id}}">
     {{mainComment.originalElement.post.title}}
   </a></p>
 
