--- a/frontend/app/views/directives/comments/editableCommentBodyDirective.html
+++ b/frontend/app/views/directives/comments/editableCommentBodyDirective.html
@@ -6,7 +6,7 @@
       <textarea class="uk-textarea"
                 rows="5" name="editBody"
                 ng-model="editableBody.value"
-                placeholder="REPLY PLACE HOLDER"
+                placeholder="{{'WRITE_COMMENT_PLACEHOLDER' |translate}}"
                 autofocus
                 ng-disabled="sendingEdit">
       </textarea>
