--- a/frontend/app/views/post/PostViewController.html
+++ b/frontend/app/views/post/PostViewController.html
@@ -1,7 +1,7 @@
 <main ng-if="post && post.enabled" class="uk-container-small uk-margin-auto">
   <div class="post-header">
     <div class="post-meta">
-      <h1>
+      <h1 class="word-brake">
         <span ng-if="isUser">
           <button ng-disabled="mutex.bookmark" ng-click="toggleBookmark()" class="no-style-button primary-button">
             <span ng-show="post.hasUserBookmarked">
