--- a/frontend/app/views/post/PostViewController.html
+++ b/frontend/app/views/post/PostViewController.html
@@ -51,9 +51,9 @@
   <hr>
   <div class="uk-flex uk-align-right">
     <button ng-if="isUser && post.owner && callback.startEdit.fn" ng-disabled="mutex.deleting" class="uk-margin-right uk-button uk-button-default uk-text-primary uk-border-rounded"
-            ng-click="callback.startEdit.fn()">EDIT POST</button>
+            ng-click="callback.startEdit.fn()">{{'POST_EDIT_BUTTON' | translate}}</button>
     <button ng-if="isAdmin" ng-disabled="mutex.deleting" class="uk-button uk-button-default logout-button uk-border-rounded"
-            ng-click="deletePost()">DELETE POST</button>
+            ng-click="openDeleteModal()">{{'POST_DELETE_BUTTON' | translate}}</button>
   </div>
 
   <div class="uk-margin-top">
@@ -77,3 +77,18 @@
     <p class="uk-text-center uk-text-lead" ng-if="comments">{{'NO_COMMENTS_PLACEHOLDER' | translate}}</p>
   </section>
 </main>
+
+<div ng-if="isAdmin" id="delete-post-modal" uk-modal>
+  <div class="uk-modal-dialog" ng-if="deletingPost">
+    <div class="uk-modal-header">
+      <h1 class="uk-modal-title">{{'CONFIRM_POST_DELETE_MODAL_TITLE' | translate}}</h1>
+    </div>
+    <p class="uk-padding-small word-brake">{{'CONFIRM_POST_DELETE_MODAL_BODY' | translate: {postTitle: post.title};}}</p>
+    <div class="uk-modal-footer uk-text-right">
+      <button class="uk-button uk-button-default uk-modal-close uk-text-primary"
+              type="button" ng-disabled="mutex.deleting">{{'CONFIRM_POST_DELETE_MODAL_CANCEL_BUTTON' | translate}}</button>
+      <button class="uk-button uk-button-primary" type="button"
+              ng-disabled="mutex.deleting" ng-click="confirmDelete()">{{'CONFIRM_POST_DELETE_MODAL_DELETE_BUTTON' | translate}}</button>
+    </div>
+  </div>
+</div>
