--- a/frontend/app/views/directives/fetch/fetchMoviesDirective.html
+++ b/frontend/app/views/directives/fetch/fetchMoviesDirective.html
@@ -1,14 +1,20 @@
 <div>
-  <div ng-show="movies.length === 0" class="uk-margin-small-top">
-    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'MOVIES_NOT_FOUND' | translate}}</h1>
-  </div>
-  <div ng-show="movies.length > 0">
-    <div ng-repeat="movie in movies">
-      <movie-list-entry-directive movie="movie"></movie-list-entry-directive>
+  <div ng-show="movies">
+    <div ng-show="movies.length === 0" class="uk-margin-small-top">
+      <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'MOVIES_NOT_FOUND' | translate}}</h1>
     </div>
-    <pagination-handler-directive pagination-params="paginationParams"
-                                  reset-pagination-fn="resetPagination"
-                                  search-fn="fetchPosts"
-                                  mutex="paginationMutex"/>
+    <div ng-show="movies.length > 0">
+      <div ng-repeat="movie in movies">
+        <movie-list-entry-directive movie="movie"></movie-list-entry-directive>
+      </div>
+      <pagination-handler-directive pagination-params="paginationParams"
+                                    reset-pagination-fn="resetPagination"
+                                    search-fn="fetchPosts"
+                                    mutex="paginationMutex"/>
+    </div>
+  </div>
+  <div ng-show="!movies" class="uk-text-center uk-text-lead uk-margin-top">
+    <span class="uk-margin-small-right" uk-spinner="ratio: 3"></span>
+    <p class="uk-text-muted">{{'LOADING' | translate}}</p>
   </div>
 </div>
