--- a/frontend/app/views/directives/search/searchPostsDirective.html
+++ b/frontend/app/views/directives/search/searchPostsDirective.html
@@ -1,16 +1,22 @@
 <div>
   <posts-filters-handler-directive filter-params="filterParams"></posts-filters-handler-directive>
-  <div ng-show="posts.length === 0" class="uk-margin-small-top">
-    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'POST_NOT_FOUND' | translate}}</h1>
-  </div>
-  <div ng-show="posts.length > 0">
-    <div ng-repeat="post in posts">
-      <post-list-entry-directive admin-controls="adminControls" remove-post-fn="removePost" post="post"></post-list-entry-directive>
+  <div ng-show="posts">
+    <div ng-show="posts.length === 0" class="uk-margin-small-top">
+      <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'POST_NOT_FOUND' | translate}}</h1>
     </div>
-    <pagination-handler-directive
-      pagination-params="paginationParams"
-      reset-pagination-fn="resetPagination"
-      search-fn="execSearch"
-      mutex="paginationMutex" />
+    <div ng-show="posts.length > 0">
+      <div ng-repeat="post in posts">
+        <post-list-entry-directive admin-controls="adminControls" remove-post-fn="removePost" post="post"></post-list-entry-directive>
+      </div>
+      <pagination-handler-directive
+        pagination-params="paginationParams"
+        reset-pagination-fn="resetPagination"
+        search-fn="execSearch"
+        mutex="paginationMutex" />
+    </div>
+  </div>
+  <div ng-show="!posts" class="uk-text-center uk-text-lead uk-margin-top">
+    <span class="uk-margin-small-right" uk-spinner="ratio: 3"></span>
+    <p class="uk-text-muted">{{'LOADING' | translate}}</p>
   </div>
 </div>
