--- a/frontend/app/views/directives/search/searchUsersDirective.html
+++ b/frontend/app/views/directives/search/searchUsersDirective.html
@@ -1,16 +1,22 @@
 <div>
   <user-filters-handler-directive filter-params="filterParams"></user-filters-handler-directive>
-  <div ng-show="users.length === 0" class="uk-margin-small-top">
-    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'USERS_NOT_FOUND' | translate}}</h1>
-  </div>
-  <div ng-show="users.length > 0">
-    <div ng-repeat="user in users">
-      <user-list-entry-directive admin-controls="adminControls" remove-user-fn="removeUser" user="user"></user-list-entry-directive>
+  <div ng-show="users">
+    <div ng-show="users.length === 0" class="uk-margin-small-top">
+      <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'USERS_NOT_FOUND' | translate}}</h1>
     </div>
-    <pagination-handler-directive
-      pagination-params="paginationParams"
-      reset-pagination-fn="resetPagination"
-      search-fn="execSearch"
-      mutex="paginationMutex" />
+    <div ng-show="users.length > 0">
+      <div ng-repeat="user in users">
+        <user-list-entry-directive admin-controls="adminControls" remove-user-fn="removeUser" user="user"></user-list-entry-directive>
+      </div>
+      <pagination-handler-directive
+        pagination-params="paginationParams"
+        reset-pagination-fn="resetPagination"
+        search-fn="execSearch"
+        mutex="paginationMutex" />
+    </div>
+  </div>
+  <div ng-show="!users" class="uk-text-center uk-text-lead uk-margin-top">
+    <span class="uk-margin-small-right" uk-spinner="ratio: 3"></span>
+    <p class="uk-text-muted">{{'LOADING' | translate}}</p>
   </div>
 </div>
