--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -44,10 +44,14 @@
 <!--    Hottest Users  -->
       <div class="uk-width-1-3 uk-margin-large-left uk-padding uk-padding-remove-top">
       <h2 class="uk-margin-small-top">{{'HOTTEST_USERS'|translate}}</h2>
-        <div ng-show="users.length > 0">
+        <div ng-show="users">
           <div ng-repeat="user in users">
             <min-user-list-entry-directive user="user"></min-user-list-entry-directive>
           </div>
+        </div>
+        <div ng-show="!users" class="uk-text-center uk-text-lead uk-margin-top">
+          <span class="uk-margin-small-right" uk-spinner="ratio: 3"></span>
+          <p class="uk-text-muted">{{'LOADING' | translate}}</p>
         </div>
       </div>
 
