User profile refactor

--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -424,6 +424,7 @@ button.link-muted, a.link-muted{
   text-decoration: none !important;
   padding: 0 15px 0 15px;
   border: 1px solid #f0506e;
+  background-color: transparent;
 }
 
 .unfollow-btn:hover,
