comments fixed & no user modal

--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -399,13 +399,13 @@ button.link-muted, a.link-muted{
 .primary-button:disabled,
 .primary-button:hover:disabled{
   color: $moovify-disabled;
-  cursor: none;
+  //cursor: none;
 }
 
 .primary-button:disabled,
 .primary-button:hover:disabled{
   color: $moovify-disabled;
-  cursor: none;
+  //cursor: none;
 }
 
 .disabled-button,
