--- a/frontend/app/views/directives/comments/commentDisplayDirective.html
+++ b/frontend/app/views/directives/comments/commentDisplayDirective.html
@@ -4,10 +4,14 @@
 
     <div class="comment-header">
       <div class="comment-avatar">
-        <img class="circle-comment uk-comment-avatar" ng-src="{{comment.user.avatar}}" alt="">
+        <a ng-href="user/{{comment.user.id}}">
+          <img class="circle-comment uk-comment-avatar" ng-src="{{comment.user.avatar}}" alt="">
+        </a>
       </div>
       <div class="comment-meta uk-margin-small-left uk-margin-right uk-flex uk-flex-column">
-        <a class="uk-comment-title" ng-href="user/{{comment.user.id}}">{{comment.user.username}}</a>
+        <div class="uk-comment-title">
+          <a ng-href="user/{{comment.user.id}}">{{comment.user.username}}</a>
+        </div>
         <p class="uk-comment-meta uk-margin-remove-top"><pretty-date-directive creation-date="comment.creationDateTime"></pretty-date-directive></p>
       </div>
       <div class="comment-vote-handler">
