--- a/frontend/app/views/directives/comments/commentDisplayDirective.html
+++ b/frontend/app/views/directives/comments/commentDisplayDirective.html
@@ -12,7 +12,10 @@
         <div class="uk-comment-title">
           <a ng-href="user/{{comment.user.id}}">{{comment.user.username}}</a>
         </div>
-        <p class="uk-comment-meta uk-margin-remove-top"><pretty-date-directive creation-date="comment.creationDateTime"></pretty-date-directive></p>
+        <p class="uk-comment-meta uk-margin-remove-top">
+          <pretty-date-directive creation-date="comment.creationDateTime"></pretty-date-directive>
+          <span ng-if="comment.edited">{{'LAST_EDITED' | translate:{date:getDateFormatted(comment.lastEditTime)};}}</span>
+        </p>
       </div>
       <div class="comment-vote-handler">
         <comment-like-handler-directive total-votes="comment.totalVotes" user-vote="comment.userVote" send-vote-fn="callbackFunctions.vote"></comment-like-handler-directive>
@@ -105,7 +108,7 @@
     <div class="uk-modal-footer uk-text-right">
       <button class="uk-button uk-button-default uk-modal-close uk-text-primary uk-border-rounded"
               type="button" ng-disabled="sendingDelete.value">{{'CONFIRM_COMMENT_DELETE_MODAL_CANCEL_BUTTON' | translate}}</button>
-      <button class="uk-button uk-button-primary" type="button"
+      <button class="uk-button uk-button-primary uk-button-danger uk-border-rounded" type="button"
               ng-disabled="sendingDelete.value" ng-click="confirmDelete()">{{'CONFIRM_COMMENT_DELETE_MODAL_DELETE_BUTTON' | translate}}</button>
     </div>
   </div>
