--- a/frontend/app/views/post/PostViewController.html
+++ b/frontend/app/views/post/PostViewController.html
@@ -94,9 +94,9 @@
     </div>
     <p class="uk-padding-small word-brake">{{'CONFIRM_POST_DELETE_MODAL_BODY' | translate: {postTitle: post.title};}}</p>
     <div class="uk-modal-footer uk-text-right">
-      <button class="uk-button uk-button-default uk-modal-close uk-text-primary"
+      <button class="uk-button uk-button-default uk-border-rounded uk-modal-close uk-text-primary"
               type="button" ng-disabled="mutex.deleting">{{'CONFIRM_POST_DELETE_MODAL_CANCEL_BUTTON' | translate}}</button>
-      <button class="uk-button uk-button-primary" type="button"
+      <button class="uk-button uk-button-primary uk-button-danger uk-border-rounded" type="button"
               ng-disabled="mutex.deleting" ng-click="confirmDelete()">{{'CONFIRM_POST_DELETE_MODAL_DELETE_BUTTON' | translate}}</button>
     </div>
   </div>
