--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -367,8 +367,8 @@
       <h2 class="uk-modal-title">{{'USER_PROMOTE_TITLE' | translate: {username: user.username};}}</h2>
     </div>
     <div class="uk-modal-footer uk-text-right">
-      <button class="uk-button uk-button-default uk-modal-close uk-text-primary" type="button">{{'UPDATE_AVATAR_MODAL_CANCEL' | translate}}</button>
-      <button class="uk-button uk-button-primary" type="button" ng-click="promoteUser()">{{'UPDATE_AVATAR_MODAL_ACCEPT' | translate}}</button>
+      <button class="uk-button uk-button-default uk-border-rounded uk-modal-close uk-text-primary" type="button">{{'UPDATE_AVATAR_MODAL_CANCEL' | translate}}</button>
+      <button class="uk-button uk-button-primary uk-border-rounded" type="button" ng-click="promoteUser()">{{'UPDATE_AVATAR_MODAL_ACCEPT' | translate}}</button>
     </div>
   </div>
 </div>
