Now you can use enter to change password in profile and fixed a bug with user service

--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -199,6 +199,7 @@
                      ng-pattern="passwordConstrains.pattern"
                      ng-minlength="{{passwordConstrains.minLen}}"
                      ng-maxlength="{{passwordConstrains.maxLen}}"
+                     ng-keydown="$event.keyCode === 13 && updatePassword()"
                      required
               />
             </label>
