--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -146,6 +146,7 @@
 .circle-navbar {
   display: block;
   width: 45px;
+  object-fit: cover;
   height: 45px;
   margin: 1em auto;
   background-size: cover;
