--- a/frontend/app/views/directives/listEntries/userListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/userListEntryDirective.html
@@ -20,11 +20,7 @@
             <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
             <span>-</span>
           </span>
-            {{user.username}}
-            <span ng-if="isAdmin">
-                <span>-</span>
-               <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
-            </span>
+            {{user.username}}<span ng-if="isAdmin"><span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span></span>
           </a>
           <p class="uk-text-meta uk-margin-remove-vertical uk-text-truncate">
             {{'USER_NAME' | translate:{name:user.name};}}
