--- a/frontend/app/views/comment/commentViewController.html
+++ b/frontend/app/views/comment/commentViewController.html
@@ -1,3 +1,8 @@
+<div ng-if="!mainComment" class="uk-text-center uk-text-lead uk-margin-top">
+  <span class="uk-margin-small-right" uk-spinner="ratio: 3"></span>
+  <p class="uk-text-muted">{{'LOADING' | translate}}</p>
+</div>
+
 <main ng-show="mainComment" class="uk-container-small uk-margin-auto">
 
   <h1 class="uk-text-meta uk-margin-top">{{ 'COMMENT_VIEW_HEADING' | translate}}</h1>
