Invite the using to create an account in post and comment views.

--- a/frontend/app/views/directives/listEntries/movieListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/movieListEntryDirective.html
@@ -1,7 +1,7 @@
 <div class="uk-width-1-1">
   <div class="uk-flex">
     <div class="uk-width-expand uk-margin-small-top">
-      <a class="text-lead" ng-href="/movie/{{movie.id}}">
+      <a class="text-lead" ng-href="movie/{{movie.id}}">
         {{movie.title}}
       </a>
       <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical">
