--- a/frontend/app/views/login/signup.html
+++ b/frontend/app/views/login/signup.html
@@ -178,7 +178,7 @@
     </div>
     <div class="uk-text-center uk-text-bold uk-text-muted uk-margin">
       {{'USER_CREATE_ALREADYACCOUNT' | translate}}
-      <a ng-href="/login">
+      <a ng-href="login">
         {{'USER_LOGIN' | translate}}
       </a>
     </div>
