--- a/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
@@ -1,13 +1,13 @@
 <div class="uk-grid-small uk-flex uk-flex-wrap uk-flex-row uk-flex-center" uk-grid>
   <div class="uk-width-1-3">
-    <a href="/user/{{user.id}}">
+    <a ng-href="user/{{user.id}}">
       <img class="circle-comment uk-comment-avatar" src="{{user.avatar}}" alt="">
     </a>
   </div>
   <div class="uk-width-2-3 margin-user-home-display">
     <div class="uk-flex">
       <div class="uk-width-expand">
-        <a ng-href="/user/{{user.id}}" class="uk-text-bold uk-text-middle uk-flex uk-flex-middle" ng-class="{'uk-text-secondary': isAdmin}">
+        <a ng-href="user/{{user.id}}" class="uk-text-bold uk-text-middle uk-flex uk-flex-middle" ng-class="{'uk-text-secondary': isAdmin}">
           <span ng-if="user.userFollower">
             <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
           </span><span ng-if="user.userFollower"> - </span>{{user.username}}<span ng-if="isAdmin"><span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span></span>
