Added visual fixes and change post length validation

--- a/frontend/app/views/directives/editablePostBodyDirective.html
+++ b/frontend/app/views/directives/editablePostBodyDirective.html
@@ -1,5 +1,5 @@
 <div>
-  <div ng-bind-html="htmlBody" ng-if="!editing.value"></div>
+  <div class="uk-text-break" ng-bind-html="htmlBody" ng-if="!editing.value"></div>
 
 
   <div ng-if="isEditable">
