--- a/frontend/app/views/directives/comments/commentDisplayDirective.html
+++ b/frontend/app/views/directives/comments/commentDisplayDirective.html
@@ -126,7 +126,7 @@
     <div class="uk-modal-footer uk-text-right">
       <button class="uk-button uk-button-default uk-modal-close uk-text-primary uk-border-rounded"
               type="button" ng-disabled="sendingDelete.value">{{'CONFIRM_GO_TO_COMMENT_VIEW_MODAL_CANCEL_BUTTON' | translate}}</button>
-      <a class="uk-button uk-button-primary" href="comment/{{comment.id}}">{{'CONFIRM_GO_TO_COMMENT_VIEW_MODAL_GO_BUTTON' | translate}}</a>
+      <a class="uk-button uk-button-primary uk-border-rounded" href="comment/{{comment.id}}">{{'CONFIRM_GO_TO_COMMENT_VIEW_MODAL_GO_BUTTON' | translate}}</a>
     </div>
   </div>
 </div>
