--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -122,9 +122,9 @@
           </div>
 
           <!--    User Comments    -->
-          <div ng-show="showing.value === 'comments'">
-            <fetch-comments-directive default-page-size="5" order="'newest'" enabled-entities="true" path="/users/{{user.id}}/comments" refresh-url-fn="setCommentsUrl" ></fetch-comments-directive>
-          </div>
+<!--          <div ng-show="showing.value === 'comments'">-->
+<!--            <fetch-comments-directive default-page-size="5" order="'newest'" enabled-entities="true" path="/users/{{user.id}}/comments" refresh-url-fn="setCommentsUrl" ></fetch-comments-directive>-->
+<!--          </div>-->
 
           <!--    User Bookmarked Posts    -->
           <div ng-show="showing.value === 'bookmarks'">
