--- a/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
@@ -1,7 +1,7 @@
 <div class="uk-grid-small uk-flex uk-flex-wrap uk-flex-row uk-flex-center" uk-grid>
   <div class="uk-width-1-3">
     <a ng-href="user/{{user.id}}">
-      <img class="circle-comment uk-comment-avatar" src="{{user.avatar}}" alt="">
+      <img class="circle-comment uk-comment-avatar" ng-src="{{user.avatar}}" alt="">
     </a>
   </div>
   <div class="uk-width-2-3 margin-user-home-display">
