--- a/frontend/app/views/directives/editablePostBodyDirective.html
+++ b/frontend/app/views/directives/editablePostBodyDirective.html
@@ -1,6 +1,5 @@
 <div>
-  <div class="uk-text-break" ng-bind-html="htmlBody" ng-if="!editing.value"></div>
-
+  <div class="uk-text-break post-body" ng-bind-html="htmlBody" ng-if="!editing.value"></div>
 
   <div ng-if="isEditable">
     <form ng-show="editing.value" name="editForm">
