--- a/frontend/app/styles/moovify/_commentsAndPosts.scss
+++ b/frontend/app/styles/moovify/_commentsAndPosts.scss
@@ -1,3 +1,12 @@
+.post-body img {
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: available;
+  max-height: 506px;
+}
+
 .ul {
   padding: 0;
   margin: 0;
