--- a/frontend/app/views/movie/movieView.html
+++ b/frontend/app/views/movie/movieView.html
@@ -1,4 +1,4 @@
-<main class="uk-article uk-container uk-container-small uk-margin-medium-top">
+<main ng-if="movie" class="uk-article uk-container uk-container-small uk-margin-medium-top">
   <article id="movie" class="uk-flex uk-flex-wrap">
     <div class="uk-width-1-1">
       <h1 class="uk-text-bold uk-h1 uk-margin-remove-adjacent uk-margin-remove-top">
@@ -43,3 +43,9 @@
     <fetch-posts-directive default-page-size="10" order="'newest'" enabled-entities="true" path="{{postsPath}}" refresh-url-fn="setNewUrl" ></fetch-posts-directive>
   </section>
 </main>
+
+<div ng-if="!movie" class="uk-text-center uk-text-lead uk-margin-top">
+  <span class="uk-margin-small-right" uk-spinner="ratio: 3"></span>
+  <p class="uk-text-muted">{{'LOADING' | translate}}</p>
+</div>
+
