--- a/frontend/app/views/directives/listEntries/userListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/userListEntryDirective.html
@@ -15,7 +15,14 @@
     <div class="uk-width-expand uk-margin-small-top uk-margin-small-bottom" ng-class="{'uk-padding-remove-left margin-user-display':!adminControls}">
       <div class="uk-flex">
         <div class="uk-width-expand">
-          <a ng-href="user/{{user.id}}" class="text-lead" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle':isAdmin}">
+          <p ng-if="!user.enabled" class="text-lead uk-text-primary" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle':isAdmin}">
+            <span ng-if="loggedUser.logged && user.userFollower">
+            <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
+            <span>-</span>
+          </span>
+            {{user.username}}<span ng-if="isAdmin"><span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span></span>
+          </p>
+          <a ng-if="user.enabled" ng-href="user/{{user.id}}" class="text-lead" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle':isAdmin}">
           <span ng-if="loggedUser.logged && user.userFollower">
             <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
             <span>-</span>
