--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -463,3 +463,7 @@ button:focus {
 .primary-badge:hover {
   background-color: $moovify-primary-color-dark;
 }
+
+#navbar {
+  top: 0 !important;
+}
