Added a text break

--- a/frontend/app/views/comment/commentViewController.html
+++ b/frontend/app/views/comment/commentViewController.html
@@ -70,7 +70,7 @@
       </div>
       <div class="comment-body">
         <div ng-if="isAdmin">
-          <p>[ {{mainComment.body}} ]</p>
+          <p class="uk-text-break">[ {{mainComment.body}} ]</p>
         </div>
       </div>
     </div>
