Needed to remove some margins

--- a/frontend/app/views/directives/listEntries/postListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/postListEntryDirective.html
@@ -34,7 +34,7 @@
 
       </p>
 
-      <p ng-if="!post.enabled" class="uk-text-primary text-lead">
+      <p ng-if="!post.enabled" class="uk-text-primary uk-margin-remove text-lead">
         <span ng-if="post.hasUserBookmarked">
           <span class="iconify small-iconify" data-icon="mdi-bookmark-check" data-inline="false" title="{{'BOOKMARKED_TITLE' | translate}}"></span>
           <span> - </span>
